...
    android:id="@+id/mainPageFragment"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_button"
        android:layout_width="110dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/glaucous"
        android:text="ADMIN"
...

    </FrameLayout>
</com.google.android.material.card.MaterialCardView>


<com.google.android.material.button.MaterialButton
        android:id="@+id/browse_events_button"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/glaucous"
        android:text="Browse Events"
        android:textSize="18sp"
...
